--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -3,4 +3,4 @@ include LICENSE.txt
 include README.rst
 include requirements/base.in
 include requirements/constraints.txt
-recursive-include uamx_social_auth *.html *.png *.gif *.js *.css *.jpg *.jpeg *.svg
+recursive-include platform_plugin_uamx_social_auth *.html *.png *.gif *.js *.css *.jpg *.jpeg *.svg
