--- a/tox.ini
+++ b/tox.ini
@@ -31,7 +31,7 @@ match-dir = (?!migrations)
 
 [pytest]
 DJANGO_SETTINGS_MODULE = test_settings
-addopts = --cov uamx_social_auth --cov tests --cov-report term-missing --cov-report xml
+addopts = --cov platform_plugin_uamx_social_auth --cov tests --cov-report term-missing --cov-report xml
 norecursedirs = .* docs requirements site-packages
 
 [testenv]
@@ -56,7 +56,7 @@ deps =
     -r{toxinidir}/requirements/doc.txt
 commands =
     doc8 --ignore-path docs/_build README.rst docs
-    rm -f docs/uamx_social_auth.rst
+    rm -f docs/platform_plugin_uamx_social_auth.rst
     rm -f docs/modules.rst
     make -e -C docs clean
     make -e -C docs html
@@ -72,11 +72,11 @@ deps =
     -r{toxinidir}/requirements/quality.txt
 commands =
     touch tests/__init__.py
-    pylint uamx_social_auth tests test_utils manage.py setup.py
+    pylint platform_plugin_uamx_social_auth tests test_utils manage.py setup.py
     rm tests/__init__.py
-    pycodestyle uamx_social_auth tests manage.py setup.py
-    pydocstyle uamx_social_auth tests manage.py setup.py
-    isort --check-only --diff tests test_utils uamx_social_auth manage.py setup.py test_settings.py
+    pycodestyle platform_plugin_uamx_social_auth tests manage.py setup.py
+    pydocstyle platform_plugin_uamx_social_auth tests manage.py setup.py
+    isort --check-only --diff tests test_utils platform_plugin_uamx_social_auth manage.py setup.py test_settings.py
     make selfcheck
 
 [testenv:pii_check]
